# etpproto-rs

./: Cargo.toml
.github/workflows/: check-and-lint.yml  release.yml  tests.yml
examples/: compression.rs  simple.rs
src/: capabilities_utils.rs  connection.rs  credentials.rs  lib.rs  message.rs  uri.rs
tests/: test_credentials.rs  test_message.rs  test_serialization.rs  test_uri.rs
